k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
spec:
  selector:
    app: wisecow
  ports:
    - name: http
      port: 4499
      targetPort: 4499
      nodePort: 30499   # Pick any from 30000–32767
  type: NodePort
